--- a/cinema/backend/package.json
+++ b/cinema/backend/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
