--- a/cinema/backend/package.json
+++ b/cinema/backend/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "nodemon --exec ts-node --transpile-only src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "db:seed": "yarn ts-node ./node_modules/.bin/typeorm migration:run -d ./src/db/data-source.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
