--- a/cinema/backend/package.json
+++ b/cinema/backend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon --exec ts-node --transpile-only src/server.ts",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "db:seed": "yarn ts-node ./node_modules/.bin/typeorm migration:run -d ./src/db/data-source.ts"
   },
   "dependencies": {
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
