--- a/cinema/backend/tsconfig.json
+++ b/cinema/backend/tsconfig.json
@@ -13,6 +13,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "include": ["src/**/*",  "tests", "**/*.test.ts"],
+  "exclude": ["node_modules"]
 }
