--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,11 @@
   "typescript.tsdk": "./cinema/backend/node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "typescript.tsserver.useSyntaxServer": "auto",
-  "editor.quickSuggestions": false,
+  "editor.quickSuggestions": {
+    "comments": "off",
+    "strings": "off",
+    "other": "off"
+  },
   "editor.suggestOnTriggerCharacters": false,
   "github.copilot.enable": {
     "*": false
